# Replit

./: CODESANDBOX-SETUP.md  DEVELOPMENT_ROADMAP.md  DYNAMIC_TEAM_ANALYZER_ROADMAP.md  Dockerfile.codesandbox  HTFT_rapor.md  ML_LEARNING_STATUS.md  Pasted--Mant-k-Hatalar-Raporu-A-a-da-verdi-iniz-algoritmik-kod-dosyan-zda-MatchPredictor-s-n-f--1744063208640.txt  README.md  SMART_ENSEMBLE_ROADMAP.md  adaptation_tracker.py  add_validation_data.py  advanced_features.py  algorithm_code.html  api_config.json  api_config.py  api_routes.py  api_v3.html  async_data_fetcher.py  buriram_sabah_skor_analizi.md  cache_table.html  check_h2h_data.py  check_js_syntax.py  check_models.py  check_team_ids.py  codesandbox-start.sh  continuous_learner.py  create_project_zip.py  debug_h2h_api.py  display_cache.py  distributed_trainer.py  dynamic_team_analyzer.py  dynamic_weight_calculator.py  ekstrem_maclar_oneriler.md  ekstrem_maclar_roadmap.md  explainable_ai.py  fix_team_ids.py  fixed_prediction_handler.js  fixed_prediction_handler_part2.js  fixtures.html  football_api_config.py  (+32 more)
.codesandbox/: environment.json  tasks.json
algorithms/: __init__.py  crf_predictor.py  dixon_coles.py  double_chance_predictor.py  elo_system.py  ensemble.py  extreme_detector.py  goal_range_predictor.py  halftime_predictor.py  handicap_predictor.py  htft_surprise_detector.py  monte_carlo.py  neural_network.py  poisson_model.py  self_learning.py  team_goals_predictor.py  xg_calculator.py  xgboost_model.py
models/: xgb_1x2.json
templates/: base.html  fixtures.html  index.html  match_insights.html  (+2 more)
(+81 files in other folders)
